<resources>
    <string name="app_name">Trending</string>
    <string name="no_network">Network not available</string>
    <string name="slow_network">Slow internet connection</string>
    <string name="double_quote">\"</string>
    <string name="quote_msg">\"%s\"</string>
    <string name="channel_name">Channel Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_video">Videos</string>
    <string name="nav_quote">Quotes</string>
    <string name="nav_fact">Fact</string>
    <string name="nav_bestPlace">Places to visit</string>
    <string name="nav_top10">Top 10</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_setting">Settings</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Videos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="admob_app_id">ca-app-pub-7253719175965619~2206118876</string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string-array name="place_to_visit">
        <item>Srinagar - Heaven on Earth</item>
        <item>Leh-Ladakh</item>
        <item>Taj-Mahal</item>
        <item>Kutch (Kachchh)</item>
        <item>Abode of clouds</item>
        <item>Mysore (Mysuru)</item>
        <item>Rishikesh - Yoga Capital of the World</item>
        <item>Manali</item>
        <item>Ranthambore - National Park</item>
        <item>Jaipur - Pink City</item>
        <item>Shimla</item>
        <item>Mumbai - City of dreams</item>
        <item>Lonavala</item>
        <item>Mahabaleshwar</item>
        <item>Sikkim</item>
        <item>Darjeeling - Queen of the hills</item>
        <item>Coorg</item>
        <item>Chikmagalur</item>
        <item>Wayanad</item>
        <item>Alleppey (Alappuzha)</item>
        <item>Munnar</item>
        <item>Hampi</item>
        <item>Ooty</item>
        <item>Pondicherry</item>
        <item>Andaman-Nicobar</item>
        <item>Lakshadweep</item>

    </string-array>
    <string-array name="place_to_visit_info">
        <item>Kashmir</item>
        <item>Kashmir</item>
        <item>Agra</item>
        <item>Gujarat</item>
        <item>Meghalaya</item>
        <item>Karnataka</item>
        <item>Uttarakhand</item>
        <item>Himachal Pradesh</item>
        <item>Rajasthan</item>
        <item>Rajasthan</item>
        <item>Himachal Pradesh</item>
        <item>Maharashtra</item>
        <item>Maharashtra</item>
        <item>Maharashtra</item>
        <item>Gangtok</item>
        <item>West Bengal</item>
        <item>Karnataka</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Kerala</item>
        <item>Kerala</item>
        <item>Karnataka</item>
        <item>Tamil Nadu</item>
        <item>Tamil Nadu</item>
        <item>Andaman-Nicobar</item>
        <item>Lakshadweep</item>

    </string-array>
    <string-array name="place_rating">
        <item>4.2</item>
        <item>4.4</item>
        <item>4.6</item>
        <item>4.2</item>
        <item>4.0</item>
        <item>4.1</item>
        <item>4.3</item>
        <item>4.3</item>
        <item>4.3</item>
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.0</item>
        <item>4.0</item>
        <item>4.3</item>
        <item>4.0</item>
        <item>4.4</item>
        <item>4.3</item>
        <item>4.4</item>
        <item>4.1</item>
        <item>4.6</item>
        <item>4.3</item>

    </string-array>
    <string-array name="place_image">
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FSrinagar.jpg?alt=media&token=cde78230-a3a8-4f10-a130-de06191901a3]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FLeh-Ladakh.jpg?alt=media&token=52a8ec51-a6ba-494d-b359-d833a78d8fef]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FTaj-Mahal.jpg?alt=media&token=210dc15f-0eba-46ae-89fd-5fb2c040120a]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FKachchh.jpg?alt=media&token=d68ea79d-4e9b-4975-a224-e02f05bc4e03]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FAbode%20of%20clouds.jpg?alt=media&token=4974e9f3-f975-477b-91c1-cfa36beb4854]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FMysore.jpg?alt=media&token=0150309d-b0d6-4d2b-b463-f8a21e7e6a43]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FRishikesh.jpg?alt=media&token=4f542b2f-e7c6-4f07-9f8d-590cee215fa9]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FManali.jpg?alt=media&token=97002599-075a-4729-b831-685c2ef4dae6]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FRanthambore.jpg?alt=media&token=e031b824-2d77-45d5-be33-79b5e1aed7d7]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FJaipur.jpg?alt=media&token=a44f28b4-72b0-4eaa-93a4-f8ab1d7e5c77]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FShimla.jpg?alt=media&token=769ae815-0b51-48fa-823f-b295cf1ca1af]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FMumbai.jpg?alt=media&token=37c69956-8b66-4099-9bf5-2ae1cc311c8f]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FLonavala.jpg?alt=media&token=fd10384d-7e31-476d-9e40-154b6c992810]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FMahabaleshwar.jpg?alt=media&token=4dd83370-6ad0-4b43-b490-343eb1815408]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FSikkim.jpg?alt=media&token=aa415953-474b-4f1e-936c-275c399c31bc]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FDarjeeling.jpg?alt=media&token=a0612ca1-7dba-48c1-93b5-f20d099242f6]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FCoorg.jpg?alt=media&token=67a8bb32-c2bc-484f-a0cf-c9994255c805]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FChikmagalur.jpg?alt=media&token=7abb7c0b-5a15-49fa-b9c7-ddd71fa96902]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FWayanad.jpg?alt=media&token=f9fdcf21-fc62-46ba-9871-b221ed9488f5]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FAlleppey.jpg?alt=media&token=9e939d5b-755a-4c36-a35e-507494a52a3d]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FMunnar.jpg?alt=media&token=d87a6ebf-364d-4a11-a33e-43384d06b3db]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FHampi.jpg?alt=media&token=73270c19-790c-4e2c-a9d6-5068027a39ba]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FOoty.jpg?alt=media&token=096a7b40-6e97-40c5-8367-8f122e9a0bde]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FPondicherry.jpg?alt=media&token=fc809f6f-cb89-45f9-adab-2992de9c6cf3]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FAndaman.jpg?alt=media&token=5a5eb500-9b31-4371-a5fb-a981fdb35680]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/trending-197008.appspot.com/o/images%2Fplace%2FLakshadweep.jpg?alt=media&token=35177213-6667-413f-9977-993c7d1ad323]]></item>

    </string-array>
    <string name="default_chip">Default</string>
    <string name="attrs_chip">With custom XML attributes</string>
    <string name="with_layout">With overall layout res, background color and click listener</string>
    <string name="with_override">With overrided ChipViewAdapter getLayoutRes and getBackgroundColor</string>
    <string name="zee_music_company">Zee Music Company</string>
    <string name="t_series">T-Series</string>
    <string name="yrf_music">YRF Music</string>
    <string name="sony_music_india">Sony Music India</string>
    <string name="taylor_swift_vevo">TaylorSwiftVEVO</string>
    <string name="akon_vevo">TaylorSwiftVEVO</string>
    <string name="zakir_khan">Zakir Khan</string>
    <string name="abish_mathew">Abish Mathew</string>
    <string name="nishant_tanwar">Nishant Tanwar</string>
    <string name="jeeveshu_ahluwalia">Jeeveshu Ahluwalia</string>
    <string name="ashish_chanchlani_vines">ashish chanchlani vines</string>
    <string name="amit_bhadana">Amit Bhadana</string>
    <string name="be_younick">Be YouNick</string>
    <string name="carryminati">CarryMinati</string>
    <string name="guru_mann_fitness">Guru Mann Fitness</string>
    <string name="fitmuscle_tv">FitMuscle TV</string>
    <string name="aaj_tak">Aaj Tak</string>
    <string name="abp_news">Aaj Tak</string>
    <string name="india_today">India Today</string>
    <string name="zee_news">Zee News</string>
    <string name="bbc_news">BBC News</string>
    <string name="the_viral_fever">The Viral Fever</string>
    <string name="all_india_bakchod">All India Bakchod</string>
    <string name="bindass">bindass</string>
    <string name="the_timeliners">The Timeliners</string>
    <string name="technical_guruji">Technical Guruji</string>
    <string name="unbox_therapy">Unbox Therapy</string>
    <string name="geekyranjit">Geekyranjit</string>
</resources>