<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_ondemand_video_black_24dp"
            android:title="@string/nav_video" />
        <item
            android:id="@+id/nav_quote"
            android:icon="@drawable/ic_format_quote_black_24dp"
            android:title="@string/nav_quote" />

        <item
            android:id="@+id/nav_fact"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/nav_fact" />

        <item
            android:id="@+id/nav_best_place"
            android:icon="@drawable/ic_beach_access_black_24dp"
            android:title="@string/nav_bestPlace" />
        <item
            android:id="@+id/nav_top_ten"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/nav_top10" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/nav_feedback" />
        </menu>
    </item>

</menu>